--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -1,7 +1,7 @@
 $desktop: 1440px;
+$tablet: 550px;
 $mobile: 375px;
 
-// Colors
 $tomato: hsl(4, 100%, 67%);
 $trans-tomato: hsla(4, 100%, 67%, 0.24);
 $light-tomato: hsl(15, 100%, 67%);
@@ -23,6 +23,7 @@ $paragraph: 16px;
   padding: 0;
   margin: 0;
   font-family: 'Roboto', sans-serif;
+  font-size: $paragraph;
 }
 
 body {
@@ -58,20 +59,8 @@ body {
   display: flex;
   justify-content: center;
   background-color: $charcoal-grey;
-  @media (max-width: 880px) {
-    padding: 0;
-  }
 
   main {
-    @media (max-width: 880px) {
-      padding: 0;
-      width: 100%;
-      border-radius: 0;
-      height: 100dvh;
-    }
-
-    font-family: 'Roboto', sans-serif;
-    font-size: 20px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -93,11 +82,6 @@ body {
 
       @media (max-width: 1090px) {
         flex: 1;
-      }
-      @media (max-width: 880px) {
-        width: 100%;
-        flex: none;
-        font-size: 15px;
       }
 
       h1 {
@@ -164,8 +148,24 @@ body {
         width: 100%;
         object-fit: cover;
       }
+    }
+  }
 
-      @media (max-width: 880px) {
+  @media (max-width: $tablet) {
+    padding: 0;
+    main {
+      padding: 0;
+      width: 100%;
+      border-radius: 0;
+      height: 100dvh;
+
+      section {
+        width: 100%;
+        flex: none;
+        font-size: 15px;
+      }
+
+      picture {
         flex: none;
         width: 100%;
         // height: 40vh;
@@ -175,6 +175,9 @@ body {
         }
       }
     }
+  }
+
+  @media (max-width: $mobile) {
   }
 }
 
